# ChangeLog for app-admin/eselect-python
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-python/ChangeLog,v 1.65 2012/04/26 14:53:20 aballier Exp $

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org>
  eselect-python-20111108.ebuild, eselect-python-99999999.ebuild:
  keyword ~amd64-fbsd

*eselect-python-20111108 (09 Nov 2011)

  09 Nov 2011; Mike Frysinger <vapier@gentoo.org>
  +eselect-python-20111108.ebuild, eselect-python-99999999.ebuild:
  Rewrite the ebuilds to not require autotools/newer EAPI to make upgrading
  simple.

  19 Jun 2010; Raúl Porcel <armin76@gentoo.org>
  eselect-python-20100321.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #316367

  28 May 2010; Markus Meier <maekke@gentoo.org>
  eselect-python-20100321.ebuild:
  arm/x86 stable, bug #316367

  26 May 2010; Pacho Ramos <pacho@gentoo.org>
  eselect-python-20100321.ebuild:
  stable amd64, bug 316367

  13 May 2010; Joseph Jezak <josejx@gentoo.org>
  eselect-python-20100321.ebuild:
  Marked ppc/ppc64 stable for bug #316637.

  04 May 2010; Jeroen Roovers <jer@gentoo.org>
  eselect-python-20100321.ebuild:
  Stable for HPPA (bug #316367).

*eselect-python-20100321 (21 Mar 2010)

  21 Mar 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -eselect-python-20090824.ebuild,
  -files/eselect-python-20090824-old-glibc.patch,
  +eselect-python-20100321.ebuild:
  Version bump. Fix process names of directly executed Python scripts (bug
  #286424). Fix building on systems without strtok_r() (bug #299152). Set
  a+rx permissions on /usr/bin/python-config (bug #299688). Handle files
  specific to Mac OS X (bug #310551).

  13 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  eselect-python-20091230.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #302775

  10 Feb 2010; Jeroen Roovers <jer@gentoo.org>
  eselect-python-20091230.ebuild:
  Stable for HPPA (bug #302775).

  10 Feb 2010; Joseph Jezak <josejx@gentoo.org>