@@ -12,13 +12,13 @@ DIST eselect-python-20100321.tar.bz2 6006 RMD160 7c24095bcac681a1e4e048504ac3864
 DIST eselect-python-20111108.tar.bz2 64959 RMD160 cdab063a3dad4c8ac9aaeb49c9bf00dce07df761 SHA1 e762805358ace163d76e677db1b1df60b744b772 SHA256 34d7618808a3c1d22e6763bc6c67d5ae47a1fa371f5e91de95a911da9aceba5e
 EBUILD eselect-python-20091230-r00.1.ebuild 1941 RMD160 9c8f45021c5153a40ed0193d883f08777e6ef55e SHA1 8d3421a596d29819254f71e003165421af1b402e SHA256 3965343f44f25b145e7509b68a672941e2216b7cf104d9ee7326c5b4283a4cce
 EBUILD eselect-python-20100321.ebuild 1724 RMD160 8910ca481a0054fd19ed4b21cea89e5374ae9ab1 SHA1 8a56d0967eb3111d99866faab79c435101f3d5ec SHA256 fa7414a925ddc2b4c3bd0be5602758276ccafa7d0f47ddf3c24a18f771aa2b85
-EBUILD eselect-python-20111108.ebuild 2317 RMD160 dc3decbf5551da9f2a095fdcd2745ca9c23e3d9a SHA1 58e5a24446601e440c483a5d2da1a2f6bcd311f0 SHA256 2ba9058f584fd7c372fe1cacde7142c89f560a725838ae3c4e8953f9569fcd1e
-MISC ChangeLog 10059 RMD160 9c3001ce7a96047f2ca368048b28c2d0670010fc SHA1 c7113abd0e224836930cbe6bbd0439cdc80a57e4 SHA256 70be607ac27e6b680ca66f9113899f8a8a333a0be3c289d3741a23b0fb444fdb
+EBUILD eselect-python-20111108.ebuild 2139 RMD160 37918f87ff8fa0e5c137238a83b6f8a772e7017c SHA1 76529394bb1f124ca5bde8eb147b55fdf43cf733 SHA256 d0db21e267f1322ad7657116f2e38f991f8e46452562e912ef43e0885dd1bcc0
+MISC ChangeLog 10172 RMD160 e2a76b72489f846bdc563c66c741d1a63e1d6b08 SHA1 241374996d18984fa94b8f30e50d246761b4fbfc SHA256 ccb3697ca6f2b33bef12ba726013ce77875f6882ca1bdf05e6704aa4ccedf630
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (SunOS)
+Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk+0y1MACgkQX3X2B8XHTonekACfc3VTHVljAbnq4XWYYTZcvsa9
-U4cAnRWkpGNJ3srT2/FrBE8nlZo47Km+
-=vDeg
+iEYEARECAAYFAk+2BIUACgkQX3X2B8XHTon30gCfQV7KjlCXrx1LPL4bbQ8Fbumg
+0BUAnR6u8/oJBvhAicCNWgb6t4eDPEeZ
+=pMsd
 -----END PGP SIGNATURE-----
