@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/app-admin/eselect-python/ChangeLog,v 1.65 2012/04/26 14:53:20 aballier Exp $
 
+  18 May 2012; Fabian Groffen <grobian@gentoo.org>
+  eselect-python-20111108.ebuild:
+  Drop unnecessary patches
+
   26 Apr 2012; Alexis Ballier <aballier@gentoo.org>
   eselect-python-20111108.ebuild, eselect-python-99999999.ebuild:
   keyword ~amd64-fbsd
